# tvikey

./: CMakeLists.txt  CONFIG.md  LICENSE.md  README.md  tvikey.ini  tvikey_kernel.yml
src/: config.h  inputdevice.c  inputdevice.h  main.c
src/devices/: keyboard.c  keyboard.h  mouse.c  mouse.h  process_bind.c  process_bind.h
src/scancodes/: kb_scancodes.h  scancodes.h
src/util/: ini.c  ini.h
